mytalent/main/default/src/objects/Employee_Hiring__c.object
<CustomObject>
    <fields>
        <fullName>Current_Address__c</fullName>
        <label>Current Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact__c</fullName>
        <label>Emergency Contact</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date_Disp__c</fullName>
        <formula>IF(
  ISBLANK(Hire_Date__c),
  &quot;&quot;,
  TEXT(YEAR(Hire_Date__c))+ &quot;/&quot; +TEXT(MONTH(Hire_Date__c))+ &quot;/&quot; +TEXT(DAY(Hire_Date__c))
  + &quot;（勤続&quot; + TEXT(FLOOR((TODAY() - Hire_Date__c)/365.2425)) + &quot;年）&quot;
)</formula>
        <label>FML Hire Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <label>Job Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_IMG__c</fullName>
        <formula>IMAGE( 
CASE(Rank__c , 
&quot;S&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbTk&quot;, 
&quot;A&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbTu&quot;, 
&quot;B&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbTz&quot;, 
&quot;C&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbU4&quot;, 
&quot;D&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbUE&quot;, 
&quot;E&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbUJ&quot;, 
&quot;F&quot;, &quot;/servlet/servlet.FileDownload?file=0157F000000lbUO&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rank&quot;, 70, 70)</formula>
        <label>FML Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Ref_CM__c</fullName>
        <formula>CASE(Rank__c , 
&quot;S&quot;, &quot;0687F000000lRD1&quot;, 
&quot;A&quot;, &quot;0687F000000lRCv&quot;, 
&quot;B&quot;, &quot;0687F000000lRCw&quot;, 
&quot;C&quot;, &quot;0687F000000lRCx&quot;, 
&quot;D&quot;, &quot;0687F000000lRCy&quot;, 
&quot;E&quot;, &quot;0687F000000lRCz&quot;, 
&quot;F&quot;, &quot;0687F000000lRD0&quot;, 
&quot;&quot; 
)</formula>
        <label>FML Rank Ref CM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_Ref__c</fullName>
        <formula>CASE(Rank__c , 
&quot;S&quot;, &quot;0157F000000lbTk&quot;, 
&quot;A&quot;, &quot;0157F000000lbTu&quot;, 
&quot;B&quot;, &quot;0157F000000lbTz&quot;, 
&quot;C&quot;, &quot;0157F000000lbU4&quot;, 
&quot;D&quot;, &quot;0157F000000lbUE&quot;, 
&quot;E&quot;, &quot;0157F000000lbUJ&quot;, 
&quot;F&quot;, &quot;0157F000000lbUO&quot;, 
&quot;&quot; 
)</formula>
        <label>FML Rank Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_Disp__c</fullName>
        <formula>IMAGE( 
CASE(Rating__c, 
5, &quot;/img/samples/stars_500.gif&quot;, 
4, &quot;/img/samples/stars_400.gif&quot;, 
3, &quot;/img/samples/stars_300.gif&quot;, 
2, &quot;/img/samples/stars_200.gif&quot;, 
1, &quot;/img/samples/stars_100.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot; 
), &quot;Unknown&quot; 
)</formula>
        <label>FML Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Ref_CM__c</fullName>
        <formula>CASE(Rating__c , 
5, &quot;0687F000000lRDW&quot;, 
4, &quot;0687F000000lRDZ&quot;, 
3, &quot;0687F000000lRDV&quot;, 
2, &quot;0687F000000lRDU&quot;, 
1, &quot;0687F000000lRDP&quot;, 
&quot;&quot; 
)</formula>
        <label>FML Rating Ref CM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Achievement__c</fullName>
        <label>Recent Achievement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>Tel</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Location__c</fullName>
        <label>Work Location</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffs__c</fullName>
        <label>ffs</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Employee Hiring</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVT-{0000}</displayFormat>
        <label>Employee Code</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>